--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">PetNeeds</string>
-    <!--    <string name="map_key" translatable="false">AIzaSyCRinuZCwJtyXYvMDE1S5Ex3cst6JJB_7c</string>-->
+    <string name="map_key" translatable="false">AIzaSyCRinuZCwJtyXYvMDE1S5Ex3cst6JJB_7c</string>
     <string-array name="Categories">
         <item>Pet Stores</item>
         <item>Trainers</item>
